# cyber_c2

./: .env.example  .gitignore  .zshrc_cyber  README.md  agent.rs  c2.js  generate_keys.py  generate_meterpreter.py  index.html  main.py  main_clean.py  msf_client.py  msf_init.rc  requirements.txt  setup_ubuntu.sh  start_c5.sh
app/: __init__.py  crypto_auth.py  database.py  mtls_config.py  security.py
payloads/: CyberEnum.ps1  Invoice.hta  b.ps1  bits.ps1  bits_stager.ps1  bypass.inf  bypass.ps1  debug_full.ps1  document_viewer.hta  enhanced_agent_fastapi.ps1  i5.ps1  i5_arm64.ps1  i5_earlybird.ps1  i5_fixed.ps1  i5_msf.ps1  i5_reflective.ps1  i5_self.ps1  i5_stomp.ps1  i5_syscall.ps1  i5_syscall_obfuscated.ps1  i5_syscall_remote.ps1  i5_syscall_update.ps1  i_simple.ps1  inject.ps1  inject_ps5.ps1  loader.ps1  loader_debug.ps1  loader_stage1.ps1  loader_stage1_simple.ps1  privesc_enum.ps1  ps_conpty_agent.ps1  pty_agent.ps1  s.ps1  stager.ps1  stager_cs.ps1  syscall_fresh.ps1  vpn.inf
payloads/rust_agent_v3/: Cargo.toml
payloads/rust_agent_v3/src/: agent.rs  lib.rs  main.rs
payloads/rust_bits_com/: Cargo.toml
payloads/rust_bits_com/src/: main.rs
sophos_bypass/: POC_DOCUMENTATION.md  QUICK_REFERENCE.md  README.md  STEPS.md  SYSCALL_INJECTION_REPORT.html  agent_https.ps1  bits_agent.ps1  bits_c2_web.py  enhanced_agent_fastapi.ps1  enhanced_agent_fastapi_documented.ps1  generate_payload.py  https_server.py  minimal_c2.py  payload.xml  simple_agent.ps1  simple_agent_http.ps1  syscall_direct.ps1  syscall_fresh_ntdll.ps1  syscall_fresh_ntdll_fixed.ps1  syscall_inject.ps1  syscall_v3.ps1
static/: bits.html  c2.css  c2.js  index.html  (+2 more)
(+49 files in other folders)
