[package]
name = "agent"
version = "1.0.0"
edition = "2021"

[lib]
name = "agent"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "agent"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "namedpipeapi", "winbase", "consoleapi", "errhandlingapi", "synchapi", "wincon"] }

[dependencies]
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "io-util", "process", "macros", "net"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
