[package]
name = "bits_com_agent"
version = "1.0.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Networking_BackgroundIntelligentTransferService",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
]}

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
